# FreeRTOS

FreeRTOS/Demo/Wasm_Emscripten/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  main.c  main_full.c
